fix: remove overflow hidden from body

--- a/christmas-task/src/styles/style.scss
+++ b/christmas-task/src/styles/style.scss
@@ -13,7 +13,6 @@ body {
   font-family: $primary-font;
   background-color: var(--primary-color-100);
   position: relative;
-  overflow: hidden;
 
   &::before {
     content: '';
